--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "animate.css": "^3.7.0",
+    "axios": "^0.18.0",
     "better-scroll": "^1.14.1",
     "fastclick": "^1.0.6",
     "jquery": "^3.3.1",
