--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "刘俊峰 <544402029@qq.com>",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "dev": "webpack-dev-server --host 0.0.0.0 --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "lint": "eslint --ext .js,.vue src",
     "build": "node build/build.js"
@@ -15,10 +15,12 @@
     "axios": "^0.18.0",
     "better-scroll": "^1.14.1",
     "fastclick": "^1.0.6",
+    "good-storage": "^1.1.0",
     "jquery": "^3.3.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "vue": "^2.5.2",
+    "vue-aplayer": "^1.6.1",
     "vue-awesome-swiper": "^2.6.7",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.0"
