--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "fastclick": "^1.0.6",
     "good-storage": "^1.1.0",
     "jquery": "^3.3.1",
+    "mescroll.js": "^1.4.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "vue": "^2.5.2",
     "vue-aplayer": "^1.6.1",
     "vue-awesome-swiper": "^2.6.7",
+    "vue-lazyload": "^1.2.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.0"
   },
