--- a/.babelrc
+++ b/.babelrc
@@ -8,5 +8,13 @@
     }],
     "stage-2"
   ],
-  "plugins": ["transform-vue-jsx", "transform-runtime"]
+  "plugins": [
+    ["transform-modules", {
+      "cube-ui": {
+        // 注意: 这里的路径需要修改到 src/modules 下
+        "transform": "cube-ui/src/modules/",
+        "kebabCase": true
+      }
+    }]
+  ]
 }
