--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
     "lint": "eslint --ext .js,.vue src",
     "build": "node build/build.js"
   },
+  "compileDependencies": [
+    "cube-ui"
+  ],
   "dependencies": {
     "animate.css": "^3.7.0",
     "axios": "^0.18.0",
     "better-scroll": "^1.14.1",
+    "cube-ui": "^1.12.15",
     "fastclick": "^1.0.6",
     "good-storage": "^1.1.0",
-    "jquery": "^3.3.1",
     "mescroll.js": "^1.4.1",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.2",
     "vue": "^2.5.2",
     "vue-aplayer": "^1.6.1",
     "vue-awesome-swiper": "^2.6.7",
@@ -28,6 +29,10 @@
     "vuex": "^3.1.0"
   },
   "devDependencies": {
+    "stylus": "^0.54.5",
+    "stylus-loader": "^2.1.1",
+    "babel-plugin-transform-modules": "^0.1.0",
+    "webpack-post-compile-plugin": "^0.1.2",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.1",
