--- a/package.json
+++ b/package.json
@@ -17,29 +17,28 @@
     "animate.css": "^3.7.0",
     "axios": "^0.18.0",
     "better-scroll": "^1.14.1",
+    "create-keyframe-animation": "^0.1.0",
     "cube-ui": "^1.12.15",
     "fastclick": "^1.0.6",
     "good-storage": "^1.1.0",
+    "install": "^0.13.0",
     "mescroll.js": "^1.4.1",
-    "vue": "^2.5.2",
+    "npm": "^6.13.7",
+    "vue": "^2.6.11",
     "vue-aplayer": "^1.6.1",
     "vue-awesome-swiper": "^2.6.7",
     "vue-lazyload": "^1.2.6",
     "vue-router": "^3.0.1",
-    "vuex": "^3.1.0",
-    "create-keyframe-animation": "^0.1.0"
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
-    "stylus": "^0.54.5",
-    "stylus-loader": "^2.1.1",
-    "babel-plugin-transform-modules": "^0.1.0",
-    "webpack-post-compile-plugin": "^0.1.2",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^7.1.1",
     "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-modules": "^0.1.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.5.0",
     "babel-preset-env": "^1.3.2",
@@ -70,15 +69,18 @@
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^2.1.1",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.9",
-    "vue-loader": "^13.3.0",
+    "vue-loader": "^13.7.3",
     "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.5.2",
+    "vue-template-compiler": "^2.6.11",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
-    "webpack-merge": "^4.1.0"
+    "webpack-merge": "^4.1.0",
+    "webpack-post-compile-plugin": "^0.1.2"
   },
   "engines": {
     "node": ">= 6.0.0",
